10/28/11 Added event reporting for end of game, see #3136
4/26/11 move all developer code to a new developer package
4/26/11 add "Developer->Preview molecules" menu item (used to be a separate app for previewing molecule colors on choosable background color)
4/9/11 #2796, handled all REVIEW task tags that were added during code review, see ticket for changesets
# 1.00.00 (50396) Apr 6, 2011
4/6/11 delete TODO file, all tasks completed, post-1.00 tasks will be tracked via Unfuddle
4/6/11 create screenshot for sim page
4/6/11 delete test apps (test-molecules, test-game-reward) from build properties
4/6/11 check in a snapshot of the design doc
4/6/11 change request: set play area color to tan (RGB=214,201,182), confirmed that this color has no colorblind issues
# 0.00.23 (50317) Apr 4, 2011
4/4/11 fix: equation coefficients disappear when dragging Game popups (bad FULL_BOUNDS PropertyChangeListener)
4/4/11 remove editable parameter from EquationNode constructor
# 0.00.22 (50286) Apr 1, 2011
4/1/11 fix test-molecules, it wouldn't launch from JNLP because class TestMoleculeNodes was package private
# 0.00.21 (50158) Mar 28, 2011
3/28/11 change request: restrict game level 1 equations so that equations with big molecules cannot be first
3/28/11 add Molecule.isBig, returns true if the molecule contains > 5 atoms
3/28/11 change request: for the "Show Why" feature, level 1=scales, 2=random, 3=bars
3/28/11 move "balanced representation" used by "Show Why" feature into the game model, so that other strategies can be used
# 0.00.20 (49980) Mar 20, 2011
3/20/11 change request: exclude the reverse of all selected reactions in level-3 games
# 0.00.19 (49962) Mar 18, 2011
3/18/11 rewrite level-3 game strategy again, a generalized version of the "exclusionary" strategy specified in the design doc
# 0.00.18 (49929) Mar 17, 2011
3/17/11 fix: use getDeltaRelativeTo in popups drag handler
3/17/11 add "Show Why" and "Hide Why" buttons to "Unbalanced" popup in game